src/app/components/CustomTooltip/CustomTooltip.module.css
.tooltipContainer {
    background-color: #F5F5F5;
    color: #0038FF;
    display: flex;
    flex-direction: column;
    align-items: center;
    animation: fadeIn 1s ease-in-out;
}

.tooltipFadeIn {

}

@keyframes fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

.tooltipImage {
    width: 240px;
    padding: 20px;
}

.quoteWrapper {
    display: flex;
    flex-direction: row;
    padding: 2rem;
    padding-top: 0rem;
    max-width: 320px;
}

.tooltipText {
}

.tooltipQuote {
    width: 39px;
    height: auto;
    align-self: start;
    margin-bottom: 1rem;
    margin-right: 2rem;
    color: #0038FF;
}

.tooltipQuoteInvisible  {
  display: block;
  visibility: hidden;
}

.imageRowContainer {
  display: flex;
    flex-direction: row;
    color: black;
    align-items: center;
    white-space: pre-line;
}

.nameColumnContainer {
  display: flex;
  flex-direction: column;
}

.nameForMobile {
  font-size: 22px;
  padding-bottom: 8px;
  padding-left: 8px;
  white-space: pre-wrap;
}

.role {
  white-space: pre-wrap;
  padding-left: 8px;
}

@media(max-width: 1024px) {
  .quoteWrapper {
    display: flex;
    flex-direction: column;
    padding: 2rem;
    padding: 1rem;
    padding-top: 0rem;
    padding-bottom: 2rem;
  }

  .tooltipImage {
    width: 100%;
    padding: 0;
    flex: 5;
  }

  .nameColumnContainer {
    display: flex;
    flex-direction: column;
    flex: 5;
  }
  
  .imageRowContainer {
    padding: 20px;
  }

  .tooltipQuoteInvisible {
    display: none;
  }

  .image {
    aspect-ratio: 1 / 1;
    height: auto !important;
    padding: 8px;
  }
}

@media(max-width: 300px) {
  .tooltipImage {
    width: 100%;
  }


  .tooltipQuote {
    width: 30px;
  }
}

